--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,343 @@
-.App {
+/* -- Container Styling -- */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #5CB8E4;
+  font-family: "Karla", Arial, Helvetica, sans-serif;
+  font-size: 62.5%;
+  letter-spacing: 0.2rem;
+  margin: 0;
+}
+
+main {
+  height: 100vh;
+  padding: 1rem 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+/* -- Text Styling -- */
+
+h1 {
+  font-size: 2.8rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+p {
+  font-size: 1.2rem;
+}
+
+
+/* -- Header / Footer Styling -- */
+
+.header--container {
+  text-align: center;
+  height: 100px;
+  width: 100%;
+}
+
+.header-title {
+  color: #181818;
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
+}
+
+  .header-title:hover {
+    letter-spacing: 1.6rem;
+  }
+
+.footer--container {
+  background-color: #181818;
+  padding: 0 2rem;
+  height: 60px;
+  min-height: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-link {
+  color: #F2F2F2;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+  .footer-link:hover {
+    color: #8758FF;
+    text-decoration: underline;
+  }
+
+.footer-icon {
+  /* border: 2px solid #393E46; */
+  border-radius: 5px;
+  color: #F2F2F2;
+  font-size: 2rem;
+  margin: 0.25rem;
+  padding: 0.25rem 0.5rem;
+}
+
+  .footer-icon:hover {
+    /* border: 2px solid #EEE; */
+    color: #8758FF;
+  }
+
+
+/* -- Index (Login / Signup) Styling -- */
+
+.auth--container {
+  background-color: #181818;
+  border: 2px solid #F2F2F2;
+  border-radius: 25px;
+  color: #F2F2F2;
+  padding: 1rem 4rem 0rem;
+}
+
+.form-title {
+  color: #F2F2F2;
+  font-weight: bold;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-group {
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.form-label {
+  margin-top: 1rem;
+}
+
+.form-control {
+  margin-bottom: 0.5rem;
+  width: 450px;
+}
+
+.form-control input {
+  border-radius: 0.5rem;
+  font-size: 1.4rem;
+  padding: 0.3rem;
+  width: 100%;
+}
+
+.instructions {
+  background-color: #000;
+  border-radius: 0.5rem;
+  color: #EEE;
+  font-size: 0.8rem;
+  letter-spacing: 0.1rem;
+  padding: 0.4rem;
+  position: relative;
+  bottom: -10%;
+  width: 100%;
+}
+
+  .instructions > svg {
+    margin-right: 0.25rem;
   }
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hide {
+  display: none;
+}
+
+.valid {
+  color: limegreen;
+}
+
+.invalid {
+  color: red;
+}
+
+.button-style {
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 5px;
+  color: #181818;
+  display: inline-block;
+  font-size: 1.4rem;
+  letter-spacing: 0.2rem;
+  margin: 2rem 1rem 1rem 0;
+  padding: 0.5rem;
+  text-align: center;
+  text-decoration: none;
+}
+
+  .button-style:disabled {
+    opacity: 0.5;
+  }
+
+  .button-style:hover {
+    background-color: #5CB8E4;
+    color: #000;
+    cursor: pointer;
+  }
+
+    .button-style:disabled:hover {
+      background-color: #F2F2F2;
+      color: #181818;
+      cursor: default;
+    }
+
+.form-link {
+  color: #5CB8E4;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+  .form-link:hover {
+    color: #8758FF;
+  }
+
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+
+/* -- Timer Styling -- */
+
+.timer--container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #181818;
+  border: 2px solid #F2F2F2;
+  border-radius: 25px;
+  color: #F2F2F2;
+  margin: 0 auto 1rem;
+  padding: 2rem 4rem;
 }
 
-.App-link {
-  color: #61dafb;
+.timer--option-container {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-evenly;
+  background-color: #181818;
+  border: 1px solid #181818;
+  border-radius: 50px;
+  font-size: 1.2rem;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.timer--option-button {
+  border: 1px solid #181818;
+  border-radius: 50px;
+  padding: 0.5rem;
+  width: 50%;
+}
+
+.selected {
+  background-color: #5CB8E4;
+}
+
+.timer--time-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  width: 100%;
+}
+
+.timer--time-display {
+  border: 3px solid #F2F2F2;
+  text-align: center;
+}
+
+.timer--time-display p {
+  font-size: 5rem;
+  margin: 0;
+}
+
+.timer--start-button {
+  font-size: 1.6rem;
+  width: 100%;
+}
+
+.running {
+  background-color: #8758FF;
+}
+
+
+/* -- Tasks Styling -- */
+
+.list--container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #181818;
+  border: 2px solid #F2F2F2;
+  border-radius: 25px;
+  color: #F2F2F2;
+  padding: 2rem 4rem;
+}
+
+.tasks--task-form {
+  padding: 1rem;
+}
+
+.tasks--task-input,
+.tasks--submit {
+  font-size: 1.4rem;
+  padding: 0.4rem;
+}
+
+.tasks--submit {
+  border: 0.5px solid black;
+  border-radius: 5px;
+  margin-left: 0.5rem;
+}
+
+.tasks--task-list {
+  font-size: 1.4rem;
+  margin-top: 1rem;
+  padding: 0 3rem;
+}
+
+.tasks--task-list-item > span {
+  padding: 0 0.5rem;
+}
+
+  .tasks--task-list-item > span:hover {
+    cursor: pointer;
+    opacity: 0.7;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.complete-task {
+  text-decoration: line-through;
+}
+
+.complete {
+  color: limegreen;
+}
+
+.incomplete {
+  color: red;
+}
+
+.tasks--counter {
+  margin: 0;
+  padding: 1rem;
 }
